# pygpg

./: .gitignore  CMakeLists.txt  README.md  _config.yml  build_pygpg.sh  gripper_params.cfg  setup.py
example/: box.txt  example.py
src/: py_generate_grasp_from_gpg.cpp
