cmake_minimum_required(VERSION 3.20)
project(pygpg)
set(CMAKE_BUILD_TYPE Release)
find_package(Boost COMPONENTS thread REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_subdirectory(dependencies/gpg libgpg)
set(PYBIND11_PYTHON_VERSION 3)
add_subdirectory(dependencies/pybind11)
pybind11_add_module(pygpg MODULE src/py_generate_grasp_from_gpg.cpp)
target_link_libraries(pygpg PRIVATE gpg_grasp_candidates_generator gpg_config_file)
